--- a/messung2.tex
+++ b/messung2.tex
@@ -101,7 +101,7 @@
       \csname LTb\endcsname%
       \put(5816,4602){\makebox(0,0)[r]{\strut{}Messwerte}}%
       \csname LTb\endcsname%
-      \put(5816,4382){\makebox(0,0)[r]{\strut{}Fit}}%
+      \put(5816,4382){\makebox(0,0)[r]{\strut{}Fit nach Gl. \eqref{eq:ZSerie}}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{messung2}}%
