--- a/literatur.bib
+++ b/literatur.bib
@@ -64,16 +64,27 @@
   publisher = {Pearson Education Deutschland, München},
   edition = {3},
   year = {2010},
-  author = {Douglas C. Giancoli}
-
+  author = {Douglas C. Giancoli},
+  isbn = {978-3-8689-4023-7},
+  edition = {3}
 }
 
-@BOOL{griffith,
+@BOOK{griffith,
   title = {Introduction to Electrodynics},
   author = {David J. Griffith},
   edition = {3},
   year = {1999},
   publisher = {Prentice-Hall},
+  isbn= {0-13-805326-X}
+}
+
+@BOOK{nolting3,
+  title = {Grundkurs Theoretische Physik 3 - Elektrodynamik},
+  author = {Wolfgang Nolting},
+  edition = {8},
+  year = {2007},
+  publisher = {Springer-verlag Berlin Heidelberg New York},
+  isbn= {978-3-540-71251-0}
 }
 
 @MISC{LP10,
