--- a/phase.tex
+++ b/phase.tex
@@ -98,11 +98,11 @@
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(2398,4602){\makebox(0,0)[r]{\strut{}Messwerte}}%
+      \put(5816,1317){\makebox(0,0)[r]{\strut{}Messwerte}}%
       \csname LTb\endcsname%
-      \put(2398,4382){\makebox(0,0)[r]{\strut{}f(x)}}%
+      \put(5816,1097){\makebox(0,0)[r]{\strut{}linearer Fit um $\omega_R$}}%
       \csname LTb\endcsname%
-      \put(2398,4162){\makebox(0,0)[r]{\strut{}g(x)}}%
+      \put(5816,877){\makebox(0,0)[r]{\strut{}Fit nach Gl. \eqref{eq:PhaseSerie}, $R=80.3\,\si{\ohm}$}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{phase}}%
