--- a/literatur.bib
+++ b/literatur.bib
@@ -83,8 +83,17 @@
   author = {Wolfgang Nolting},
   edition = {8},
   year = {2007},
-  publisher = {Springer-verlag Berlin Heidelberg New York},
+  publisher = {Springer-Verlag Berlin Heidelberg New York},
   isbn= {978-3-540-71251-0}
+}
+
+@BOOK{tipler,
+  title = {Physik},
+  author = {Paul A. Tipler},
+  edition = {2},
+  year = {1998},
+  publisher = {Spektrum-Verlag Heidelberg Berlin},
+  isbn= {3-86025-122-8}
 }
 
 @MISC{LP10,
