--- a/messung3.tex
+++ b/messung3.tex
@@ -98,7 +98,7 @@
       \csname LTb\endcsname%
       \put(5816,4602){\makebox(0,0)[r]{\strut{}Messwerte}}%
       \csname LTb\endcsname%
-      \put(5816,4382){\makebox(0,0)[r]{\strut{}Fit}}%
+      \put(5816,4382){\makebox(0,0)[r]{\strut{}Fit nach Gl. \eqref{eq:ZPara}}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{messung3}}%
